3.2.0 2014-??-??
ChangeLog
========
 * cacher:
   * PHP_5_6 support
   * fixed #333: reduce memory usage for small or empty files

3.1.1 2014-09-02
ChangeLog
========
 * cacher
   * compatible with bcompiler
 * admin
   * fixed random 24H counters clear. it's a race cached condition. thanks to the report from Per Hansson

3.1.0 2013-10-10
ChangeLog
========
 * added support for PHP_5_5 (cacher, optimizer, disassembler)
 * cacher:
   * closed #228: allow using var caching for cli to share data between child processes
   * compatible with pcntl_fork()
   * fixed support for __FILE__ __DIR__ to correctly handle files that got moved/hardlinked (this fix is now move out of xcache.experimental)
 * disassembler:
   * fixed crash with nested sandbox
   * improved support for PHP_4 ~ PHP_5_4, also added support for PHP_5_5
 * admin
   * make mkpassword.php easier for noob
 * optimizer
   * rewrite try/catch handling to fix nested try/catch

3.0.4 2013-10-10
ChangeLog
========
 * cacher
   * fixed #324: xcache.readonly_protection = Off cause SEGV under mass concurrent
   * fixed #323: refix locking impl for threaded env
 * build
   * win32: fix build with no indent.exe nor cat.exe

3.0.3 2013-06-18
ChangeLog
========
 * clean files in release (fix htdocs config)

3.0.2 2013-06-10
ChangeLog
========
 * cacher:
   * fixed #296: (PHP5.4+ only bug), racecondition Multiple instances of the same software causes PHP "cannot redeclare class" errors when readonly_protection is not in use
   * fixed #301: refix locking impl
   * fixed #307: compatible with Zend Debugger which requires to be installed after Zend Extension Manager
 * admin
   * fixed #303: tablesort.js not found in Diagnosis and Coverager
 * misc
   * fixed #297: segv on startup under sparc, ini setting overflow

3.0.1 2013-01-11
ChangeLog
========
 * cacher:
   * fixed crash when cache is too small on start up
   * fixed #295: crash using traits with PHP 5.4.8+